Fixed alignment issue with h1.site-name.

--- a/scss/elements/_headings.scss
+++ b/scss/elements/_headings.scss
@@ -42,7 +42,7 @@ h1.site-name {
         width: auto;
         display: inline-block;
         padding: 0;
-        margin: 5px 0 8px 0;
+        margin: 0px 0 8px 0;
     }
 
     a {
